--- a/css/base.css
+++ b/css/base.css
@@ -82,6 +82,17 @@ img {
 
 .last { margin-right: 0 !important; }
 
+pre {
+    background: white;
+    border: 1px solid #DEDEDE;
+    margin-bottom: 15px;
+    padding: 10px;
+}
+
+hr.post {
+    margin: 60px 0 80px 0;
+}
+
 /* `headings
 ----------------------------------------------------------------------------------------------------*/
 
@@ -233,5 +244,3 @@ fieldset {
     position: relative;
     height: 100px;
 }
-
-
