--- a/_layout/default.html
+++ b/_layout/default.html
@@ -3,29 +3,51 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<link rel="stylesheet" href="/css/base.css" type="text/css">
+    <!-- HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
 	<title>{% if page.title %}{{ page.title }} | {% endif %}Jontourage</title>
 
 </head>
 
 <body>
-	<div id="header">
-		<div id="navigation">
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/articles.html">Articles</a></li>
-				<li><a href="/projects.html">Projects</a></li>
-				<li class="last"><a href="/about.html">About</a></li>
-			</ul>
-		</div>
-	</div>
-	<div id="wrap">
-        <div id="content">
-    		{{ content }}
+    <div class="topbar">
+        <div class="fill">
+            <div class="container">
+                <ul class="nav">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/articles.html">Articles</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
+                    <li class="last"><a href="/about.html">About</a></li>
+                </ul>
+            </div>
         </div>
-	</div>
-    <div id="footer"></div>
+    </div>
+
+    <div class="container">
+        <div class="content">
+            {{ content }}
+        </div>
+
+    </div>
+    <footer>
+    </footer>
+
+    <!-- javascripts -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
+    <script src="/js/jquery.easing.1.3.js"></script>
+	<script src="/js/lib/less-1.1.5.min.js"></script>
+	<script src="/js/lib/bootstrap-tabs.js" type="text/javascript"></script>
+	<script src="/js/lib/bootstrap-twipsy.js" type="text/javascript"></script>
+	<script src="/js/lib/bootstrap-alerts.js" type="text/javascript"></script>
+	<script src="/js/global.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var App = App || {};
+    </script>
     <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-20692289-1']);
@@ -37,5 +59,6 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
     </script>
+    <!-- /javascripts -->
 </body>
 </html>
