--- a/_layout/post.html
+++ b/_layout/post.html
@@ -2,10 +2,16 @@
 layout: default
 ---
 
-<div class="post">
-    <h1>{{ post.title }}</h1>
-    {{ content }}
-</div>
-<div class="post-date">
-    -- {{ post.date|dateFormat }}
-</div>
+<section>
+    <div class="page-header">
+        <h1>{{ post.title }}</h1>
+    </div>
+    <div class="row">
+        <div class="span14 post">
+            {{ content }}
+        </div>
+        <div class="post-date">
+            -- {{ post.date|dateFormat }}
+        </div>
+    </div>
+</section>
