--- a/_layout/default.html
+++ b/_layout/default.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 
-	<title>{% if page.title %}{{ page.title }} | {% endif %}Jontourage</title>
+    <title>{% if page.title %}{{ page.title }} | {% endif %}Jontourage</title>
 
 </head>
 
@@ -40,11 +40,11 @@
     <!-- javascripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
     <script src="/js/jquery.easing.1.3.js"></script>
-	<script src="/js/lib/less-1.1.5.min.js"></script>
-	<script src="/js/lib/bootstrap-tabs.js" type="text/javascript"></script>
-	<script src="/js/lib/bootstrap-twipsy.js" type="text/javascript"></script>
-	<script src="/js/lib/bootstrap-alerts.js" type="text/javascript"></script>
-	<script src="/js/global.js" type="text/javascript"></script>
+    <script src="/js/lib/less-1.1.5.min.js"></script>
+    <script src="/js/lib/bootstrap-tabs.js" type="text/javascript"></script>
+    <script src="/js/lib/bootstrap-twipsy.js" type="text/javascript"></script>
+    <script src="/js/lib/bootstrap-alerts.js" type="text/javascript"></script>
+    <script src="/js/global.js" type="text/javascript"></script>
     <script type="text/javascript">
         var App = App || {};
     </script>
@@ -58,6 +58,20 @@
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
+    </script>
+
+    <script type="text/javascript">
+      var _gauges = _gauges || [];
+      (function() {
+        var t   = document.createElement('script');
+        t.type  = 'text/javascript';
+        t.async = true;
+        t.id    = 'gauges-tracker';
+        t.setAttribute('data-site-id', '4ff13d5ef5a1f535d0000003');
+        t.src = '//secure.gaug.es/track.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(t, s);
+      })();
     </script>
     <!-- /javascripts -->
 </body>
