--- a/_layout/default.html
+++ b/_layout/default.html
@@ -2,6 +2,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="description" content="The personal website of Jonathan Chu: programmer and entrepreneur.">
+    <meta name="author" content="Jonathan Chu">
 
     <!-- HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
